--- a/SASS/resto.scss
+++ b/SASS/resto.scss
@@ -42,7 +42,6 @@ section {
     .carte {
         position: relative;
         background-color: $color_fond;
-        //z-index: 1;
         margin-top: -60px;
         border-radius: 32px 32px 0 0;
     }
@@ -61,7 +60,6 @@ section {
             font-family: Shrikhand;
             font-size: 1.5rem;
             padding: 10px 0 0px 0px;
-            //padding-left: 17px;
         }
 
         .card-heart {
@@ -69,19 +67,17 @@ section {
             @include coeur (20px, -5px, relative);
             font-size: 21px;
         }
-
     }
 
     .menu {
         padding: 0 13px;
 
         h2 {
-            font-size: 1rem;
+            font-size: 1.3rem;
             font-weight: 300;
             padding-bottom: 5px;
             border-bottom: 3px solid $color_tertiaire;
             width: 30px;
-
         }
 
         .plats {
@@ -91,64 +87,61 @@ section {
             border-radius: 15px;
             margin-bottom: 10px;
             box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
-
+            display: flex;
+            justify-content: space-between;
+            overflow: hidden;
 
             h3 {
                 font-size: 1.125rem;
-                font-weight: 600;
-                padding: 15px 55px 0 15px;
+                font-weight: 500;
+                padding: 5px 55px 0 15px;
                 margin: 0;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
             }
 
-            h4 {
-                font-size: 1 rem;
+            .description {
+                font-size: 0.94 rem;
                 font-weight: 300;
                 margin: 0;
-                padding-left: 15px;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-
-            h5 {
-                padding-right: 5px;
-                font-size: 1.125rem;
-                font-weight: 600;
-                margin: 0;
-                position: absolute;
-                right: 5px;
+                padding: 5px 55px 0 15px;
             }
 
             .prix {
-
-                //position: relative;
-                //display: block;
-                //right: 55px;
-                //top: 0px;
-
+                width: 100%;
                 display: flex;
-                justify-content: space-between;
-                //align-items: center;
+                flex-direction: column;
                 padding-bottom: 5px;
                 padding-right: 58px;
-
+                transition: 0.2s;
             }
 
-
+            .ellipsis {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
 
             .vert {
-
-
-
+                cursor: pointer;
                 border: 0;
                 padding: 0;
+                display: flex;
+                justify-content: flex-end;
+                align-items: flex-end;
+                position: absolute;
+                right: -55px;
+                transition: 0.2s;
+
+                .euro {
+                    padding-right: 10px;
+                    font-size: 1.125rem;
+                    font-weight: 600;
+                    margin: 0;
+                    position: relative;
+                    bottom: 10px;
+                }
 
                 .fa-circle-check {
-                    position: absolute;
-                    right: -55px;
+                    position: relative;
                     top: 0%;
                     color: white;
                     width: 22px;
@@ -156,13 +149,22 @@ section {
                     background-color: $color_tertiaire;
                     border-radius: 0 15px 15px 0;
                     width: 55px;
-                    height: 64px;
+                    height: 56px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-
                 }
             }
+        }
+
+        .plats:hover .vert {
+            right: 0px;
+            transition: 0.2s;
+        }
+
+        .plats:hover .prix {
+            width: calc(100% - 55px);
+            transition: 0.2s;
         }
     }
 
@@ -217,40 +219,26 @@ footer {
     }
 
     section {
-
         display: flex;
         flex-direction: column;
         align-items: center;
 
         .photo {
-            //position: relative;
-            //width: 200%;
             height: 383px;
-            //display: inline-block;
-            //object-fit: cover;
             object-position: center 58%;
-
         }
 
         .carte {
             width: 75%;
             border-radius: 50px 50px 0 0;
             margin-top: -48px;
-            //font-size: ;
 
-            /*display: flex;
-            //justify-content: center;
-            flex-direction: column;
-            align-items: center;*/
             .nom h1 {
                 padding-top: 50px;
             }
 
             .menu .sousmenu {
                 width: 70%;
-                //display: flex;
-                //flex-direction: column;
-                //align-items: center;
                 margin: 0 auto;
             }
 
