--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -23,64 +23,43 @@ main {
     max-width: 768px;
     width: 100%;
 
-
     .loader {
         background-color: rgb(253, 253, 253);
         width: 100%;
         height: 100%;
         position: fixed;
-        //top: 0.5vh;
         right: 0.5vh;
-        //object-position: left 1300px;
         z-index: 1;
-
-
-
         animation: disappear 0.5s 1 forwards;
         animation-delay: 3s;
 
-
         .kitchen {
-
             font-size: 3em;
             color: $color_primaire;
-
-            //display: inline-block;
-            //height: 150px;
-            //width: 50px;
-            //size: 150px 150px;
             height: 100%;
             width: 100%;
             position: absolute;
             animation-duration: 3000ms;
-            //transform: scaleX(0.5em);
             animation: spin 3s linear;
-
             animation-fill-mode: forwards;
             animation-duration: 3s;
             display: flex;
             justify-content: center;
             align-items: center;
-
         }
     }
 }
 
 @keyframes disappear {
-
-
     to {
         opacity: 0;
         z-index: -10;
     }
-
 }
 
 @keyframes spin {
     0% {
         transform: rotate(0deg);
-        //transform: scaleX(0.5em);
-        transform: ($color_primaire $color_tertiaire);
     }
 
     25% {
@@ -89,14 +68,10 @@ main {
 
     66% {
         transform: rotate(300deg);
-        //transform: scaleX(3em);
     }
 
     100% {
         transform: rotate(360deg);
-
-
-
     }
 }
 
@@ -321,55 +296,61 @@ footer {
     @include footer;
 }
 
-/*footer {
-    padding-bottom: 20px;
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background-color: $color_footer;
-    color: white;
+@media screen and (min-width: 769px) {
+    footer {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px 0;
+        @include footer;
 
-    img {
-        height: 1.25rem;
-        margin: 20px 22px;
-    }
+        .intro h1 {
+            font-size: 2.5rem;
+        }
 
-    ul {
-        list-style-type: none;
-        margin: 0 22px;
-        padding: 0;
+        nav {
+            width: 67.5%;
+            margin: 40px 0;
+            padding: 0 16.25%;
 
-        li {
-            margin-bottom: 10px;
-
-            &.modcourt {
-                font-weight: 300;
-            }
-
-            &.modlong {
-                font-weight: 500;
+            .choix {
+                width: 290px;
             }
         }
 
-        a {
-            color: white;
+        .placement-nav {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+
         }
 
-        .couvert {
-            padding-right: 16px;
-        }
+        .resto {
+            width: 75%;
+            padding: 0 12.5%;
 
-        .partenaire {
-            padding-right: 10px;
+            .placement-resto {
+                width: 90%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: row;
+                flex-wrap: wrap;
+                padding: 0 5%;
+
+                .card {
+                    width: 45%;
+                    margin-bottom: 50px;
+                }
+            }
         }
     }
-}*/
+}
 
-@media screen and (min-width:769px)
-/*and (max-width:1440px)*/
-    {
+@media screen and (min-width:1025px) {
     main {
         max-width: 1440px;
         width: 100%;
@@ -396,7 +377,6 @@ footer {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-
     }
 
     .resto {
@@ -420,36 +400,6 @@ footer {
     }
 
     footer {
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: row-reverse;
-        align-items: flex-end;
-        padding: 30px 25px;
-
-        &.logo__footer {
-            padding-right: 56px;
-            padding-bottom: 2 px;
-        }
-
-        ul {
-            display: flex;
-            flex-direction: row;
-            margin: 0;
-
-            li {
-                &.modcourt {
-                    margin-right: 25px;
-                }
-
-                &.modlong {
-                    margin-right: 40px;
-                }
-            }
-        }
-
-
-        img {
-            margin-bottom: 5px;
-        }
+        @include footerDesktop;
     }
 }
